[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cap Japonês/Cap Japonês.gd" type="Script" id=1]
[ext_resource path="res://Cap Japonês/Cap Japones.tres" type="Texture" id=2]
[ext_resource path="res://Soundtracks/Menu Selection Click.ogg" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.7011, 11.2663 )

[node name="Cap Japonês" type="StaticBody2D" groups=[
"Capitão",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 242.95, -28.8258 )
rotation = -1.57079
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -28.6055
margin_top = -49.7948
margin_right = 11.3945
margin_bottom = -35.7948
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som_Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
